# Avito-qa

./: .flake8  .gitignore  BUGS.md  README.md  TASK_1.md  TESTCASES.md  conftest.py  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
clients/: rest_client.py
configs/: config.py  logging.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 10cec769b0d5f13a.txt  10f77de32022fe6e.txt  1106a2ad56bc1380.txt  110c7684ae201c7a.txt  1166c79f8914c414.txt  13595306c60cc48a.txt  1378fd3eb2983089.txt  1384b67a5542a76.txt  13fe927eae6723ee.txt  1413bf65b6ff67bc.txt  14ef99f847261b88.txt  153c1955a9820607.txt  1568b932e0733d0.txt  158d35f28e8d134d.txt  158ecb7db24168fd.txt  1647634c48142ab0.txt  169e1b9222d63309.txt  17e9dd25157bdba1.txt  1840a70de94ce2d.txt  18fc7736f389e530.txt  192d417401ac174f.txt  196d3b10736d54b1.txt  1973ee108a2c2c8c.txt  1a930cda74161e28.txt  1ae8c21767bf7b8f.txt  1b6412e5e75143fe.txt  1b85dbb2006770fd.txt  1bb6e70b8a6ceff2.txt  1c81f9235c035203.txt  1cafb31fd6d0e66f.txt  1d3b14f432efe90d.txt  1d7be52a713b2408.txt  1d7ec8ec375f0e19.txt  1de84fa91524a579.txt  (+486 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
utils/: allure_marks.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+283 files in other folders)
